ignore local scripts

--- a/index.html
+++ b/index.html
@@ -22,25 +22,31 @@
       <tbody>
         <tr>
           <td align="left">
-            <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI" src="images/wissmiller-road.jpg">
-            <a href="https://goo.gl/maps/XNTh8XcQrDUgcPoU9"><br>Yes, Wissmiller Road is real!<br>Click here for a map.</a>
+            <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI"
+              src="images/wissmiller-road.jpg">
+            <a href="https://goo.gl/maps/XNTh8XcQrDUgcPoU9" target="_blank"><br>
+              Yes, Wissmiller Road is real!<br>Click here to see it.</a>
           </td>
           <td>
             <table width="100%">
               <tr>
                 <td align="center">
-                  <h1>wissmiller.net</h1>
+                  <center><h1>wissmiller.net</h1></center>
                 </td>
               </tr>
               <tr>
                 <td align="center">
                   <h3>Paul Wissmiller</h3>
+<!--
+                  <h3>нет войне "No to war"</h3>
+-->
                 </td>
               </tr>
             </table>
           </td>
           <td align="right">
             <img style="align: right; margin: 10px 10px" alt="Old Glory" src="images/flag.png">
+            <br>нет войне "No to war"&nbsp;&nbsp;
           </td>
           <td class="divider" style="width: 10px">
           </td>
@@ -115,29 +121,30 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
 		    </div>
 		    <h2>Welcome!</h2>
         <p>
-        Greetings, folks, and welcome to the new <a href="https://wissmiller.net">wissmiller.net</a>.
+        Greetings, folks, and welcome to the new wissmiller.net.
         We switched from Comcast to T-Mobile for home internet service,
-        and the new gateway won't let me host the website in my house like before.
-        Enter <a href="https://pages.github.com">GitHub Pages</a>!
+        and the new gateway won't let me host the website at home like before.
+        Enter <a href="https://pages.github.com" target="_blank">GitHub Pages</a>!
 		    </p>
         <p>
-        <a href="https://github.com">GitHub</a>
+        <a href="https://github.com" target="_blank">GitHub</a>
         is a web service widely used by open source developers
-        to maintain and share their many source code repositories.
-        GitHub Pages offers free hosting of websites stored on GitHub,
-        so it's web hosting with automatic versioning and source control built in.
+        to maintain and share their source code repositories.
+        GitHub Pages offers free hosting for websites stored on GitHub,
+        so it's free web hosting with automatic versioning and source control built in.
         Anyway, this stuff is exciting to some and boring to others, so I'll move on.
 		    </p>
         <p>
         GitHub Pages does have some have restrictions.
         It doesn't allow private pages with password protection,
-        so I won't be able to include genealogy or other sensitive data.
-        Other restrictions require some internal reworking of the website,
-        but that's way easier than constantly maintaining my own web server.
+        so I won't be able to include genealogy or any other sensitive data.
+        Other restrictions required some internal reworking of the website,
+        but it was still much easier than it was to maintain my own web server.
 		    </p>
         <p>
         I invite you to take a tour and send me your thoughts and comments.
-        To join the email list for family news, such as genealogy and the annual Wissmiller reunion,
+        To join the email list for family news, such as genealogy
+        and the annual Wissmiller reunion,
         please <a href="contact.html">send me an email</a>.
 		    </p>
         <p>
@@ -179,12 +186,12 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                       <tbody>
                         <tr>
                           <td style="align: left;">
-                            <a href="http://pages.github.com/">
+                            <a href="http://pages.github.com/" target="_blank">
                               <img style="border: none; " alt="Powered by GitHub Pages" src="images/github.png">
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Fri Nov 11 18:39:11 2022
+This page modified: Fri Nov 18 11:27:52 2022
                             </p>
                           </td>
                         <tr>
