--- a/pictures.html
+++ b/pictures.html
@@ -22,25 +22,31 @@
       <tbody>
         <tr>
           <td align="left">
-            <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI" src="images/wissmiller-road.jpg">
-            <a href="https://goo.gl/maps/XNTh8XcQrDUgcPoU9"><br>Yes, Wissmiller Road is real!<br>Click here for a map.</a>
+            <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI"
+              src="images/wissmiller-road.jpg">
+            <a href="https://goo.gl/maps/XNTh8XcQrDUgcPoU9" target="_blank"><br>
+              Yes, Wissmiller Road is real!<br>Click here to see it.</a>
           </td>
           <td>
             <table width="100%">
               <tr>
                 <td align="center">
-                  <h1>wissmiller.net</h1>
+                  <center><h1>wissmiller.net</h1></center>
                 </td>
               </tr>
               <tr>
                 <td align="center">
                   <h3>Paul Wissmiller</h3>
+<!--
+                  <h3>нет войне "No to war"</h3>
+-->
                 </td>
               </tr>
             </table>
           </td>
           <td align="right">
             <img style="align: right; margin: 10px 10px" alt="Old Glory" src="images/flag.png">
+            <br>нет войне "No to war"&nbsp;&nbsp;
           </td>
           <td class="divider" style="width: 10px">
           </td>
@@ -161,7 +167,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                       <tbody>
                         <tr>
                           <td style="align: left;">
-                            <a href="http://pages.github.com/">
+                            <a href="http://pages.github.com/" target="_blank">
                               <img style="border: none; " alt="Powered by GitHub Pages" src="images/github.png">
                               Powered by GitHub Pages
                             </a>
