--- a/reunion.html
+++ b/reunion.html
@@ -22,25 +22,31 @@
       <tbody>
         <tr>
           <td align="left">
-            <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI" src="images/wissmiller-road.jpg">
-            <a href="https://goo.gl/maps/XNTh8XcQrDUgcPoU9"><br>Yes, Wissmiller Road is real!<br>Click here for a map.</a>
+            <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI"
+              src="images/wissmiller-road.jpg">
+            <a href="https://goo.gl/maps/XNTh8XcQrDUgcPoU9" target="_blank"><br>
+              Yes, Wissmiller Road is real!<br>Click here to see it.</a>
           </td>
           <td>
             <table width="100%">
               <tr>
                 <td align="center">
-                  <h1>wissmiller.net</h1>
+                  <center><h1>wissmiller.net</h1></center>
                 </td>
               </tr>
               <tr>
                 <td align="center">
                   <h3>Paul Wissmiller</h3>
+<!--
+                  <h3>нет войне "No to war"</h3>
+-->
                 </td>
               </tr>
             </table>
           </td>
           <td align="right">
             <img style="align: right; margin: 10px 10px" alt="Old Glory" src="images/flag.png">
+            <br>нет войне "No to war"&nbsp;&nbsp;
           </td>
           <td class="divider" style="width: 10px">
           </td>
@@ -190,16 +196,15 @@ We voted and elected officers for next year:
 </ul>
 </p>
 <p>
-We agreed on the time and place for next year’s reunion (Our 100th Annual Reunion!)
-June 25, 2023, 12:30 PM, at the First Presbyterian Church in Gibson City
+We agreed on the time and place for next year’s reunion (Our 100th Annual Reunion!).
+It will be June 25, 2023, 12:30 PM, at the First Presbyterian Church in Gibson City.
 </p>
 <p>
 The meeting was adjourned.
 		    </p>
 		    <h2>Wissmiller Reunion 2023</h2>
         <p>
-        We plan to meet again at the First Presbyterian Church in Gibson City at 12:30 pm on Sunday, June 25, 2023.
-        Next year will be the 100th annual reunion! We're looking for ways to make our centennial reunion
+        Next year will be our 100th annual reunion! We're looking for ways to make our centennial reunion
         a special one. If you have ideas for that, please <a href="contact.html">pass them along</a>.
         Thanks!
 		    </p>
@@ -251,12 +256,12 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                       <tbody>
                         <tr>
                           <td style="align: left;">
-                            <a href="http://pages.github.com/">
+                            <a href="http://pages.github.com/" target="_blank">
                               <img style="border: none; " alt="Powered by GitHub Pages" src="images/github.png">
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Sat Nov 12 06:06:15 2022
+This page modified: Thu Nov 17 11:22:12 2022
                             </p>
                           </td>
                         <tr>
