--- a/pictures.html
+++ b/pictures.html
@@ -46,7 +46,7 @@
           </td>
           <td align="right">
             <img style="align: right; margin: 10px 10px" alt="Old Glory" src="images/flag.png">
-            <br>нет войне "No to war"&nbsp;&nbsp;
+<!--            <br>нет войне "No to war"&nbsp;&nbsp;-->
           </td>
           <td class="divider" style="width: 10px">
           </td>
