still trying to get favicon working

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <html>
   <head>
     <title>wissmiller.net</title>
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico?">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta content="Paul Wissmiller" name="author">
     <link rel=stylesheet href="wissnet.css" type="text/css" media=screen>
