commented out wissmiller.org

--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,11 @@
 <!--#include virtual="top.html" -->
+<!-- begin top.html -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
   "http://www.w3.org/TR/html4/strict.dtd">
-<!-- begin top.html -->
 <html>
   <head>
     <title>wissmiller.net</title>
+    <!-- leading slash and trailing question mark are required for some reason -->
     <link rel="shortcut icon" href="/favicon.ico?">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta content="Paul Wissmiller" name="author">
@@ -56,12 +57,12 @@
       <tbody>
         <tr>
           <td style="height: 100%; vertical-align: top">
-<!-- end top.html -->
 
 <!--
 vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
 -->
 
+<!-- end top.html -->
 
 <!--#include virtual="toplinks.html" -->
 <!-- begin toplinks.html -->
@@ -75,7 +76,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
             <a href="genealogy.html">Genealogy</a><br><br>
 <!--            This link is now embedded in reunion.html.-->
             <a href="reunion.html">Wissmiller Reunion</a><br><br>
-            <a href="http://www.wissmiller.org/" target="_blank">Reunion page by George W.</a><br><br>
+<!--            <a href="http://www.wissmiller.org/" target="_blank">Reunion page by George W.</a><br><br>-->
 <!--            <a href="https://drive.google.com/drive/folders/1hKjhsO_Ac8bMp1otI6s9zfQeDm9zyKpc?usp=sharing">-->
             <a href="pictures.html">Pictures by Lee Wissmiller</a><br><br>
             <a href="contact.html">Contact Me</a><br><br>
@@ -86,12 +87,12 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
     </table>
   </td>
   <td style="vertical-align: top">
-<!-- end toplinks.html -->
 
 <!--
 vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
 -->
 
+<!-- end toplinks.html -->
 
 <table width="100%" cellpadding="0" cellspacing="30">
    <!--
@@ -115,17 +116,16 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
 
 <!--#include virtual="bottomlinks.html" -->
 <!-- begin bottomlinks.html -->
-	   </td>
-	 </tr>
-  </tbody>
-</table>
-<!-- end bottomlinks.html -->
+<!-- Content here would appear at the bottom of each page. Currently there is none. -->
 
 <!--
 vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
 -->
+<!-- end bottomlinks.html -->
 
 <!--#include virtual="bottom.html" -->
+<!-- begin bottom.html -->
+  </table>
     <table width="100%" cellpadding="0" cellspacing="0">
       <tbody>
         <tr>
