corrected content in reunion.html

--- a/reunion.html
+++ b/reunion.html
@@ -148,7 +148,7 @@ Aaron Wissmiller to Elaine Carter, June 10, 2022
 <p>
 Births:<br>
 Walter Paul Kenzie, Dec. 6, 2021<br>
-Ella Josephine, Dec. 18, 2021 (If you know her last name, please <a href="contact.html">let me know</a>)
+Ella Josephine Watson, Dec. 18, 2021
 </p>
 <p>
 Deaths:<br>
@@ -254,7 +254,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Thu Nov 17 11:22:12 2022
+This page modified: Mon Nov 28 08:31:45 2022
                             </p>
                           </td>
                         <tr>
