--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,10 @@
       <tbody>
         <tr>
           <td align="left">
-            <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI"
-              src="images/wissmiller-road.jpg">
-            <a href="https://goo.gl/maps/XNTh8XcQrDUgcPoU9" target="_blank"><br>
+            
+            <a href="https://goo.gl/maps/XNTh8XcQrDUgcPoU9" target="_blank">
+              <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI"
+              src="images/wissmiller-road.jpg"><br>
               Yes, Wissmiller Road is real!<br>Click here to see it.</a>
           </td>
           <td>
