--- a/pictures.html
+++ b/pictures.html
@@ -16,9 +16,10 @@
       <tbody>
         <tr>
           <td align="left">
-            <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI"
-              src="images/wissmiller-road.jpg">
-            <a href="https://goo.gl/maps/XNTh8XcQrDUgcPoU9" target="_blank"><br>
+            
+            <a href="https://goo.gl/maps/XNTh8XcQrDUgcPoU9" target="_blank">
+              <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI"
+              src="images/wissmiller-road.jpg"><br>
               Yes, Wissmiller Road is real!<br>Click here to see it.</a>
           </td>
           <td>
@@ -165,7 +166,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Fri Nov 11 18:45:11 2022
+This page modified: Mon Dec 12 07:27:35 2022
                             </p>
                           </td>
                         <tr>
