--- a/reunion.html
+++ b/reunion.html
@@ -16,9 +16,10 @@
       <tbody>
         <tr>
           <td align="left">
-            <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI"
-              src="images/wissmiller-road.jpg">
-            <a href="https://goo.gl/maps/XNTh8XcQrDUgcPoU9" target="_blank"><br>
+            
+            <a href="https://goo.gl/maps/XNTh8XcQrDUgcPoU9" target="_blank">
+              <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI"
+              src="images/wissmiller-road.jpg"><br>
               Yes, Wissmiller Road is real!<br>Click here to see it.</a>
           </td>
           <td>
@@ -94,14 +95,6 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
 
 <!-- end toplinks.html -->
 
-<div id="fb-root"></div>
-<script type="text/javascript">(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <table width="100%" cellpadding="0" cellspacing="30">
   <tbody>
@@ -254,7 +247,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Mon Nov 28 08:31:45 2022
+This page modified: Mon Dec 12 07:16:02 2022
                             </p>
                           </td>
                         <tr>
