more minor changes

--- a/reunion.html
+++ b/reunion.html
@@ -20,7 +20,7 @@
             <a href="https://goo.gl/maps/XNTh8XcQrDUgcPoU9" target="_blank">
               <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI"
               src="images/wissmiller-road.jpg"><br>
-              Yes, Wissmiller Road is real!<br>Click here to see it.</a>
+              Yes, Wissmiller Road is real!<br>Click here to see it on a map.</a>
           </td>
           <td>
             <table width="100%">
@@ -247,7 +247,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Mon Dec 12 07:16:02 2022
+This page modified: Mon Dec 12 07:16:02 2022 CST
                             </p>
                           </td>
                         <tr>
