--- a/genealogy.html
+++ b/genealogy.html
@@ -76,7 +76,8 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
             <a href="index.html">Welcome</a><br><br>
             <a href="genealogy.html">Genealogy</a><br><br>
 <!--            This link is now embedded in reunion.html.-->
-            <a href="reunion.html">Wissmiller Reunion</a><br><br>
+            <a href="2023reunion.pdf">2023 Reunion Info</a><br><br>
+            <a href="reunion.html">2022 Reunion Recap</a><br><br>
 <!--            <a href="http://www.wissmiller.org/" target="_blank">Reunion page by George W.</a><br><br>-->
 <!--            <a href="https://drive.google.com/drive/folders/1hKjhsO_Ac8bMp1otI6s9zfQeDm9zyKpc?usp=sharing">-->
             <a href="pictures.html">Pictures by Lee Wissmiller</a><br><br>
