--- a/pictures.html
+++ b/pictures.html
@@ -76,7 +76,8 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
             <a href="index.html">Welcome</a><br><br>
             <a href="genealogy.html">Genealogy</a><br><br>
 <!--            This link is now embedded in reunion.html.-->
-            <a href="reunion.html">Wissmiller Reunion</a><br><br>
+            <a href="2023reunion.pdf">2023 Reunion Info</a><br><br>
+            <a href="reunion.html">2022 Reunion Recap</a><br><br>
 <!--            <a href="http://www.wissmiller.org/" target="_blank">Reunion page by George W.</a><br><br>-->
 <!--            <a href="https://drive.google.com/drive/folders/1hKjhsO_Ac8bMp1otI6s9zfQeDm9zyKpc?usp=sharing">-->
             <a href="pictures.html">Pictures by Lee Wissmiller</a><br><br>
@@ -101,9 +102,9 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
       <td>
 		    <div class="caption" style="float: right; text-align: center">
           <figure>
-<!--             <img style="height: 324px; margin: 10px 10px" alt="Aretha says Hi!" src="images/Lee and Clovis Adams.jpg">-->
-             <img style="height: 600px; margin: 10px 10px" alt="Aretha says Hi!" src="images/Lee and Clovis Adams.jpg">
-             <figcaption>Dad and his shutterbug buddy, Clovis Adams</figcaption>
+            <img style="height: 600px; margin: 10px 10px" alt="Lee Wissmiller and Clovis Adams"
+              src="images/Lee and Clovis Adams.jpg">
+            <figcaption>Dad and his shutterbug buddy, Clovis Adams</figcaption>
           </figure>
         </div>
         <h2>Pictures</h2>
@@ -118,8 +119,8 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
         <p>
         For many years, my brother George and I had been storing several boxes of Dad's slides
         and wondering how to preserve them for the future.
-        Then the Glen Ellyn Public Library acquired a slide scanner that creates computer images,
-        so I scanned the slides, copied the info on each slide and posted them here.
+        Then the Glen Ellyn Public Library acquired a slide scanner that creates computer images.
+        I scanned the slides, copied the written info on each one and posted them all here.
         Enjoy!
         </p>
         <p>
@@ -166,7 +167,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Mon Dec 12 07:27:35 2022 CST
+This page modified: Mon Feb 27 21:55:47 2023 CST
                             </p>
                           </td>
                         <tr>
