Added genealogy data forms.

--- a/index.html
+++ b/index.html
@@ -120,14 +120,16 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
         to maintain and share their source code repositories.
         GitHub Pages offers free hosting for websites stored on GitHub,
         so it's free web hosting with automatic versioning and source control built in.
-        Anyway, this stuff is exciting to some and boring to others, so I'll move on.
         </p>
         <p>
-        GitHub Pages does have some have restrictions.
+        However, GitHub Pages does have some have restrictions.
         It doesn't allow private pages with password protection,
         so I won't be able to include genealogy or any other sensitive data.
         Other restrictions required some internal reworking of the website,
         but it's still much easier than maintainng my own web server.
+        </p>
+        <p>
+        Anyway, technical stuff is interesting to some and boring to others, so I'll stop here.
         </p>
         <p>
         I invite you to take a tour and send me your thoughts and comments.
@@ -178,7 +180,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Mon Dec 12 07:16:28 2022 CST
+This page modified: Mon Apr 24 11:36:22 2023 CST
                             </p>
                           </td>
                         <tr>
