numerous minor changes

--- a/genealogy.html
+++ b/genealogy.html
@@ -76,11 +76,11 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
             <a href="index.html">Welcome</a><br><br>
             <a href="genealogy.html">Genealogy</a><br><br>
 <!--            This link is now embedded in reunion.html.-->
-            <a href="2023reunion.pdf">2023 Reunion Info</a><br><br>
-            <a href="reunion.html">2022 Reunion Recap</a><br><br>
+            <a href="reunion2023.html">2023 Reunion</a><br><br>
+            <a href="reunion2022.html">2022 Reunion</a><br><br>
 <!--            <a href="http://www.wissmiller.org/" target="_blank">Reunion page by George W.</a><br><br>-->
 <!--            <a href="https://drive.google.com/drive/folders/1hKjhsO_Ac8bMp1otI6s9zfQeDm9zyKpc?usp=sharing">-->
-            <a href="pictures.html">Pictures by Lee Wissmiller</a><br><br>
+            <a href="pictures.html">Pictures by my Dad, Lee Wissmiller</a><br><br>
             <a href="contact.html">Contact Me</a><br><br>
 <!--            <hr style="height: 1px; width: 100%">-->
           </td>
@@ -169,13 +169,17 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
         <p>
         Ancestry allows full access to the person who contributed the data (me),
         but hides personal information about living persons from others.
-        I may be able to export the data and share it with anyone who is well known to me
-        and has a serious interest in our family's genealogy.
-        If that's you, please <a href="contact.html">contact me</a>.
         </p>
-        <a href="https://www.ancestry.com/family-tree/tree/120203756/family?cfpid=300190987926" target="_blank">
+        Here's a link to the Jacob Wissmiller tree on Ancestry, but you may not be able to see it with a free account,
+        and a subscription to Amnesty is expensive.
+        <a href="https://www.ancestry.com/family-tree/tree/120203756/family?cfpid=300190987926" target="_blank"><br>
           Jacob Wissmiller family tree on Ancestry</a>
         </p>
+        I may be able to export the data and share with people who are well known to me
+        and have a serious interest in our family's genealogy.
+        If that's you, please <a href="contact.html">contact me</a>.
+        </p>
+        <p>
       </td>
     </tr>
   </tbody>
@@ -216,7 +220,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Mon Apr 24 11:32:41 2023 CST
+Last change on this page: Wed Jul  5 09:48:34 2023 CST
                             </p>
                           </td>
                         <tr>
