--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
             <a href="index.html">Welcome</a><br><br>
             <a href="genealogy.html">Genealogy</a><br><br>
 <!--            This link is now embedded in reunion.html.-->
-            <a href="2023reunion.pdf">2023 Reunion Info</a><br><br>
-            <a href="reunion.html">2022 Reunion Recap</a><br><br>
+            <a href="reunion2023.html">2023 Reunion</a><br><br>
+            <a href="reunion2022.html">2022 Reunion</a><br><br>
 <!--            <a href="http://www.wissmiller.org/" target="_blank">Reunion page by George W.</a><br><br>-->
 <!--            <a href="https://drive.google.com/drive/folders/1hKjhsO_Ac8bMp1otI6s9zfQeDm9zyKpc?usp=sharing">-->
-            <a href="pictures.html">Pictures by Lee Wissmiller</a><br><br>
+            <a href="pictures.html">Pictures by my Dad, Lee Wissmiller</a><br><br>
             <a href="contact.html">Contact Me</a><br><br>
 <!--            <hr style="height: 1px; width: 100%">-->
           </td>
@@ -103,9 +103,13 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
 	    <td>
 		    <div class="caption" style="float: right; text-align: center">
 <figure>
-    <img style="height: 324px; margin: 10px 10px" alt="Aretha says Hi!" src="images/Aretha.gif"/>
-    <figcaption>Aretha says Hi!</figcaption>
+    <img style="height: 324px; margin: 10px 10px" alt="Kayaking in Florida" src="images/Kayaking in Florida.jpg"/>
+    <figcaption>Kayaking in Florida</figcaption>
 </figure>
+<!--<figure>-->
+<!--    <img style="height: 324px; margin: 10px 10px" alt="Aretha says Hi!" src="images/Aretha.gif"/>-->
+<!--    <figcaption>Aretha says Hi!</figcaption>-->
+<!--</figure>-->
 		    </div>
 		    <h2>Welcome!</h2>
         <p>
@@ -127,9 +131,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
         so I won't be able to include genealogy or any other sensitive data.
         Other restrictions required some internal reworking of the website,
         but it's still much easier than maintainng my own web server.
-        </p>
-        <p>
-        Anyway, technical stuff is interesting to some and boring to others, so I'll stop here.
+        This technical stuff is interesting to some and boring to others, so I'll stop here.
         </p>
         <p>
         I invite you to take a tour and send me your thoughts and comments.
@@ -180,7 +182,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Mon Apr 24 11:36:22 2023 CST
+Last change on this page: Sat Sep 23 01:47:03 2023 CST
                             </p>
                           </td>
                         <tr>
