--- a/contact.html
+++ b/contact.html
@@ -76,11 +76,11 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
             <a href="index.html">Welcome</a><br><br>
             <a href="genealogy.html">Genealogy</a><br><br>
 <!--            This link is now embedded in reunion.html.-->
-            <a href="2023reunion.pdf">2023 Reunion Info</a><br><br>
-            <a href="reunion.html">2022 Reunion Recap</a><br><br>
+            <a href="reunion2023.html">2023 Reunion</a><br><br>
+            <a href="reunion2022.html">2022 Reunion</a><br><br>
 <!--            <a href="http://www.wissmiller.org/" target="_blank">Reunion page by George W.</a><br><br>-->
 <!--            <a href="https://drive.google.com/drive/folders/1hKjhsO_Ac8bMp1otI6s9zfQeDm9zyKpc?usp=sharing">-->
-            <a href="pictures.html">Pictures by Lee Wissmiller</a><br><br>
+            <a href="pictures.html">Pictures by my Dad, Lee Wissmiller</a><br><br>
             <a href="contact.html">Contact Me</a><br><br>
 <!--            <hr style="height: 1px; width: 100%">-->
           </td>
@@ -151,7 +151,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Thu Nov 17 10:58:10 2022 CST
+Last change on this page: Thu Nov 17 10:58:10 2022 CST
                             </p>
                           </td>
                         <tr>
